--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
+# spring.data.mongodb.replica-set-name=${MONGO_REPLICA_SET} Java Spring app can't seem to work with the replica set yet, will have a look at this in the future
 spring.data.mongodb.database=${MONGO_DB_NAME}
-spring.data.mongodb.uri=mongodb+srv://${MONGO_USER}:${MONGO_PASSWORD}@${MONGO_CLUSTER}/
+spring.data.mongodb.uri=mongodb://${MONGO_USER}:${MONGO_PASSWORD}@${MONGO_CLUSTER}:${MONGO_PORT}/?ssl=true&retrywrites=false&maxIdleTimeMS=120000&appName=@${MONGO_USER}@
