--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ jar {
 bootJar {
 	archiveBaseName = 'personal-blogs-backend'
 	archiveVersion = version
+	exclude '**/*.env'
 }
 
 configurations {
